tests/vertical-slice/accept/vec_element_width_oob_traps.hew
fn main() {
    let xs: Vec<i8> = Vec::new();
    xs.push(1);
    let _ = xs[1];
}
