tests/vertical-slice/reject/weak_new_undefined.hew
fn main() {
    let _ = Weak::new();
}
